fixed text overlap issue & added download button on images

--- a/src/App.scss
+++ b/src/App.scss
@@ -243,6 +243,8 @@
           }
 
           p {
+            overflow: hidden;
+            height: auto;
             border-radius: 10px;
             background-color: white;
             padding: 10px 20px;
@@ -281,6 +283,25 @@
             }
             a {
               color: white;
+            }
+            .images {
+              div {
+                position: relative;
+                svg {
+                  position: absolute;
+                  width: 25px;
+                  height: 25px;
+                  cursor: pointer;
+                  right: 5px;
+                  bottom: 5px;
+                  background: white;
+                  border-radius: 15px;
+                  border: 0px;
+                }
+                img {
+                  height: 100%;
+                }
+              }
             }
           }
           .userInfo {
